refactor: organizing , modularizing code

--- a/package.json
+++ b/package.json
@@ -3,6 +3,21 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "alias": {
+    "src": "./src",
+    "utils": "./src/utils",
+    "assets": "./src/assets",
+    "components": "./src/components",
+    "connectors": "./src/connectors",
+    "context": "./src/context",
+    "layout": "./src/layout",
+    "consts": "./src/consts",
+    "hooks": "./src/hooks",
+    "queries": "./src/hooks/queries",
+    "pages": "./src/pages",
+    "styles": "./src/styles",
+    "svgs": "./src/assets/svgs"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
